# aicr-binder-dashboards

./: .gitignore  LICENSE  README.md  campaign_dashboard.py  pyproject.toml  studies_dashboard.py
.binder/: environment.yml  postBuild
.github/workflows/: binder-validate.yml
apps/: __init__.py
apps/campaign/: README.md  __init__.py  components.py  index.ipynb
apps/story/: README.md  __init__.py  dataloader_ddp_story.ipynb  dataloader_figures.py
apps/studies/: README.md  __init__.py  components.py  dataloader.ipynb  ddp.ipynb  gds.ipynb  hpcg.ipynb  hpl-mxp.ipynb  index.ipynb  nccl.ipynb
data/manifests/: aicr-public.generated.json  manifest.sample.json
data/schema/: manifest.schema.json
docs/: binder-deployment-notes.md  data-contract.md  status.md
lib/: __init__.py  artifacts.py  manifest.py  osn.py  plots.py  provenance.py
scripts/: generate_manifest.py
tests/: test_imports.py  test_manifest.py  test_story_deck.py  test_urls.py
