[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicr-binder-dashboards"
version = "0.1.0"
description = "Binder dashboards for AICR Cambridge benchmark artifacts"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22",
  "jupyterlab>=4.2",
  "pandas>=2.2",
  "panel>=1.5",
  "plotly>=5.22",
  "requests>=2.32",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]

[tool.setuptools]
packages = ["lib", "apps", "apps.campaign", "apps.studies"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

